--- a/src/components/Slider/Slide/Slide.module.scss
+++ b/src/components/Slider/Slide/Slide.module.scss
@@ -1,16 +1,20 @@
+@import '../common/commonStyles';
+
 .imageWrapper {
-  width: 900px;
-  height: 600px;
-  border: 1px solid black;
-  background-color: black;
+  width: calc(100% - 40px);
+  height: calc(100% - 40px);
+  @include flexCenter();
+  margin: 0;
+  padding: $paddingBase;
 }
 .image {
+  position: relative;
   width: 100%;
   height: 100%;
 }
 
 .figcaption {
-  width: 100%;
+  width: 80%;
   height: 8rem;
   &__title {
     text-align: center;
@@ -24,4 +28,10 @@
     text-indent: 40px;
     text-align: justify;
   }
+}
+
+.positionAbsolute {
+  position: absolute;
+  width: 80%;
+  bottom: 20px;
 }
