--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -1,6 +1,7 @@
 @import '../Slider/common/commonStyles';
 
 .contentContainer {
+  width: max-content;
   margin: 0;
   background-color: $darkGrey;
   color: $white;
