add move slider

--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -1,6 +1,9 @@
 @import '../Slider/common/commonStyles';
 
 .contentContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: max-content;
   margin: 0;
   background-color: $darkGrey;
