--- a/src/components/Slider/Carousel/Carousel.module.scss
+++ b/src/components/Slider/Carousel/Carousel.module.scss
@@ -2,22 +2,30 @@
 
 .carousel {
   position: relative;
+  @include flexCenter();
 }
 .buttonsBlock {
   position: absolute;
   margin: auto;
   display: flex;
-  width: 100%;
-  justify-content: space-evenly;
-  bottom: 140px;
-}
-.button {
-  border-radius: 10px;
-  opacity: 0.3;
-  &:hover {
-    opacity: 1;
+  width: 80%;
+  justify-content: space-between;
+  align-items: flex-start;
+  bottom: 125px;
+  & svg,
+  input {
+    opacity: 0.3;
+    &:hover {
+      opacity: 1;
+    }
   }
 }
-.playBlock {
+.movesBlock {
   @include flexCenter();
+
+  &__playControl {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
 }
